# smc_fqdn

./: .gitignore  app.py  logs.txt  pyproject.toml  requirements.txt  smc.py  smc.spec  ui.py
